# alma-unic-reduction

./: .gitignore  README.md  pyproject.toml
docs/: index.html  search.js  unic_pipeline.html
docs/unic_pipeline/: argparse_actions.html  argparse_parents.html  build_tree.html  clean_tasks.html  common_types.html  data_handler.html  logger.html  plotting.html  run_tclean_parallel.html  spectrum_tools.html  unic.html  utils.html
unic_pipeline/: argparse_actions.py  argparse_parents.py  argparse_process.py  build_tree.py  clean_tasks.py  common_types.py  data_handler.py  plotting.py  run_tclean_parallel.py  spectrum_tools.py  unic.py  utils.py
unic_pipeline/configs/: default.cfg
