[tool.poetry]
name = "unic-pipeline"
version = "0.1.0"
description = ""
authors = ["Fernando Olguin <f.olguin.ch@gmail.com>"]
readme = "README.md"
packages = [{include = "unic_pipeline"}]

[tool.poetry.dependencies]
python = "^3.8"
casatools = "^6.6.0.20"
casatasks = "^6.6.0.20"
casadata = "^2023.9.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
