[tool.poetry]
name = "unic-pipeline"
version = "0.1.0"
description = ""
authors = ["Fernando Olguin <f.olguin.ch@gmail.com>"]
readme = "README.md"
packages = [{include = "unic_pipeline"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
casatools = "^6.6.0.20"
casatasks = "^6.6.0.20"
casadata = "^2023.9.18"
astropy = "^6.0.0"
spectral-cube = "^0.6.5"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
